Update content on index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h2 class="songtitile">Jestem rzeką</h2>
             <h4 class="band">Utwór: Mikromusic</h4>
             <p class="text">
-                Stoję nad tobą i patrzę ty umierasz <br>
+                Zmiana wykonana na githubie <br>
                 Byłam twoja gdy z gwiazd na Ziemię zeszłam <br>
                 Czy jestem szczęśliwa patrząc jak znikasz? <br>
                 Gdy tyle miłości dostaje a w zamian nie daje nic <br>
