--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h4 class="band">Utwór: Mikromusic</h4>
             <p class="text">
                 Zmiana wykonana na githubie <br>
-                Byłam twoja gdy z gwiazd na Ziemię zeszłam <br>
+                Kolejny commit<br>
                 Czy jestem szczęśliwa patrząc jak znikasz? <br>
                 Gdy tyle miłości dostaje a w zamian nie daje nic <br>
                 Jestem Tobą, Ty jesteś mną <br>
