--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p class="text">
                 Zmiana wykonana na githubie <br>
                 Kolejny commit<br>
-                Czy jestem szczęśliwa patrząc jak znikasz? <br>
+                I jeszcze jeden na githubie<br>
                 Gdy tyle miłości dostaje a w zamian nie daje nic <br>
                 Jestem Tobą, Ty jesteś mną <br>
                 Jestem rzeką, Ona jest mną <br>
