Add style for page header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 Zmiana wykonana na githubie <br>
                 Kolejny commit<br>
                 I jeszcze jeden na githubie<br>
-                Gdy tyle miłości dostaje a w zamian nie daje nic <br>
+                to sobie tutaj tez cos zmienie<br>
                 Jestem Tobą, Ty jesteś mną <br>
                 Jestem rzeką, Ona jest mną <br>
                 Jestem pustynią, jestem drzazgą <br>
